Summary of important user-visible changes for version 4.4:
---------------------------------------------------------

 ** Other new functions added in 4.4:

      gsvd

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------


 ** The following functions were deprecated in Octave 4.0 and have been
    removed from Octave 4.4.

      allow_noninteger_range_as_index
      bicubic              
      delaunay3            
      do_braindead_shortcircuit_evaluation
      dump_prefs           
      find_dir_in_path     
      finite               
      fmod                 
      fnmatch              
      gmap40               
      loadaudio            
      luinc                
      mouse_wheel_zoom     
      nfields              
      octave_tmp_file_name 
      playaudio            
      saveaudio            
      setaudio
      syl                  
      usage                

 ** The header file oct-alloc.h has been removed along with the macros
    that it defined (DECLARE_OCTAVE_ALLOCATOR, DEFINE_OCTAVE_ALLOCATOR,
    and DEFINE_OCTAVE_ALLOCATOR2).


Summary of important user-visible changes for version 4.2:
---------------------------------------------------------

 ** The parser has been extended to accept, but ignore, underscore
    characters in numbers.  This facilitates writing more legible code
    by using '_' as a thousands separator or to group nibbles into bytes
    in hex constants.

    Examples: 1_000_000 == 1e6  or  0xDE_AD_BE_EF

 ** The parser has been extended to understand binary numbers which
    begin with the prefix '0b' or '0B'.  The value returned is Octave's
    default numeric class of double, not at unsigned integer class.
    Therefore numbers greater than flintmax, i.e., 2^53, will lose some