@@ -1,7 +1,6 @@
 EXTRA_DIST += \
   m4/module.mk \
   m4/ax_blas.m4 \
-  m4/ax_blas_f77_func.m4 \
   m4/ax_compare_version.m4 \
   m4/ax_lapack.m4 \
   m4/ax_openmp.m4 \
@@ -12,4 +11,5 @@ EXTRA_DIST += \
   m4/ltsugar.m4 \
   m4/ltversion.m4 \
   m4/lt~obsolete.m4 \
+  m4/octave_blas_f77_func.m4 \
   m4/pkg.m4
